...
    val lifecycleOwner = LocalLifecycleOwner.current
    val articlesState by viewModel.articlesState.collectAsStateWithLifecycle(
        initialValue = UiState.Loading,
        lifecycle = lifecycleOwner.lifecycle,
        context = lifecycleOwner.lifecycleScope.coroutineContext
    )
    LogLifecycle(name = "Articles")
    Articles(articlesState, navigate)
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun Articles(
...
        floatingActionButton = {
            LargeFloatingActionButton(
                onClick = {
                    navigate("articles/add")
                },
            ) {
                Icon(Icons.Filled.Add, "Add article")
            }
        }
    ) { paddingValues ->
        Box(
            modifier = Modifier
                .padding(paddingValues)
...
